TXDEV-183 #comment Abrir links. Dependiendo del target en el tag <a>, se abre en la misma web o abre una nueva wpf...

--- a/ToCefSharp/HtmlTest.html
+++ b/ToCefSharp/HtmlTest.html
@@ -54,6 +54,12 @@
 
     <a href="http://www.texyon.com" target="_blank">Texyon</a>
 
+    <a href="http://www.texyon.com" target="_parent">Texyon</a>
+
+    <a href="http://www.texyon.com" target="_self">Texyon</a>
+
+    <a href="http://www.texyon.com" target="_top">Texyon</a>
+
 </body>
 
 </html>
